# anomaly

./: .gitignore  Cargo.toml  README.md  build.sh
src/: main.rs
src/gtk_gui/: mod.rs
src/windows_gui/: mod.rs
