[package]
name = "anomaly"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [target.x86_64-pc-windows-gnu]
# linker = "/usr/bin/x86_64-w64-mingw32-gcc"
# ar = "/usr/x86_64-w64-mingw32/bin/ar"

[dependencies]
	# common
	smoltcp = "0.8.2"
	
	# linux
	gtk = {version = "0.16.2", optional = true}
	
	# windows
	windows = {version = "0.43.0", optional = true}
	nwg = {version = "1.0.13", package = "native-windows-gui", optional = true}
	nwd = {version = "1.0.5", package = "native-windows-derive", optional = true}

[features]
	# linux
	linux-os = ["gtk-gui"]
	gtk-gui = ["gtk"]
	
	# windows
	windows-os = ["windows-gui", "windows"]
	windows-gui = ["nwg", "nwd"]
